[package]
name = "envlt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "envlt_server"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
tokio = { version = "1.38.0", features = ["rt", "net", "rt-multi-thread"] }
